# definitely-not-glovo

./: Entities.oom  README.md  docker-compose.yml
ArticleService/: Dockerfile  go.mod  go.sum  main.go
ArticleService/db/: db.go
ArticleService/handlers/: articles.go
ArticleService/models/: article.go  dto.go  mappers.go
ArticleService/repository/: repository.go
ArticleService/router/: router.go
ClientApp/client-app/: Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
GatewayService/: Dockerfile  go.mod  go.sum  main.go
GatewayService/handlers/: apis.go  articles_service.go  orders_service.go  reports_service.go  restaurants_service.go  reviews_service.go  users_service.go
GatewayService/router/: router.go
GatewayService/utils/: authorization.go  communication.go
OrderService/: Dockerfile  go.mod  main.go
OrderService/db/: db.go
OrderService/handlers/: orders.go
OrderService/models/: dto.go  enums.go  mappers.go  order.go
OrderService/repository/: repository.go
OrderService/router/: router.go
ReportService/: Cargo.toml  Dockerfile  Rocket.toml
ReportService/src/: main.rs
RestaurantService/: Dockerfile  go.mod  go.sum  main.go
RestaurantService/db/: db.go
RestaurantService/handlers/: restaurants.go
RestaurantService/models/: dto.go  mappers.go  models.go  restaurant.go
RestaurantService/repository/: repository.go
RestaurantService/router/: router.go
RestaurantService/utils/: utils.go
ReviewService/: Dockerfile  go.mod  go.sum  main.go
UserService/: Dockerfile  go.mod  go.sum  main.go
(+170 files in other folders)
