[package]
name = "ReportService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.9.18" }
tokio = { version = "1", features = ["full"] }

diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = {version = "1.0.138", features = ["derive"] } 
serde_json = "1.0.82"

rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }